--- a/Implementations/SQLBackedCache/pom.xml
+++ b/Implementations/SQLBackedCache/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>SQLiteBackedCache</artifactId>
+	<artifactId>SQLBackedCache</artifactId>
 
 	<parent>
 		<groupId>co.casterlabs</groupId>
@@ -23,21 +23,19 @@
 			<version>${project.parent.version}</version>
 			<scope>compile</scope>
 		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
-		<dependency>
-			<groupId>org.xerial</groupId>
-			<artifactId>sqlite-jdbc</artifactId>
-			<version>3.41.0.0</version>
-			<scope>provided</scope>
-		</dependency>
-
-		<!-- https://github.com/Casterlabs/Rakurai/tree/main/Json -->
 		<dependency>
 			<groupId>co.casterlabs.Rakurai</groupId>
 			<artifactId>Json</artifactId>
 			<version>1.17.0</version>
 			<scope>compile</scope>
+		</dependency>
+
+		<!-- Test dependencies -->
+		<dependency>
+			<groupId>org.xerial</groupId>
+			<artifactId>sqlite-jdbc</artifactId>
+			<version>3.41.0.0</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
